--- a/public/css/_contact.scss
+++ b/public/css/_contact.scss
@@ -24,12 +24,10 @@
     &_inform {
         position: absolute;
         width: 40%;
-        // top: 50%;
         top: 84px;
         right: 0;
         background-color: $main-blue;
         color: #fff;
-        // transform: translateY(-50%);
         padding-top: 50px;
         padding-left: 20px;
         padding-bottom: 50px;
@@ -41,6 +39,34 @@
             align-items: center;
             &:last-child {
                 border: 0;
+            }
+            &:nth-last-child(2) {
+                border: 0;
+            }
+            &.contact_line {
+                position: relative;
+                &::before {
+                    position: absolute;
+                    content: "";
+                    width: 195px;
+                    height: 1px;
+                    background-color: #4368A5;
+                    left: 0;
+                    top: 0;
+                }
+                &::after {
+                    position: absolute;
+                    content: "";
+                    width: 120px;
+                    height: 120px;
+                    // background-color: $main-blue;
+                    bottom: 0;
+                    right: 0;
+                    background-image: url(../img/qrcode.png);
+                    background-size: 115px;
+                    background-position: center;
+                    background-repeat: no-repeat;
+                }
             }
             svg {
                 width: 25px;
@@ -70,6 +96,34 @@
     }
 }
 
+@media screen and (max-width:1199.98px) {
+    .contact {
+        &_inform {
+            &_item {
+                &.contact_line {
+                    &::after {
+                        right: -20%;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width:1100px) {
+    .contact {
+        &_inform {
+            &_item {
+                &.contact_line {
+                    &::after {
+                        right: -10%;
+                    }
+                }
+            }
+        }
+    }
+}
+
 @media screen and (max-width:991.98px) {
     .contact {
         padding-right: 0;
@@ -95,6 +149,15 @@
                 a {
                     color: $gray-48 !important;
                 }
+                &.contact_line {
+                    &::before {
+                        background-color: #9d9d9d;
+                    }
+                    &::after {
+                        right: 0;
+                        background-image: url(../img/qrcode-2.png);
+                    }
+                }
             }
         }
         &_map {
@@ -111,6 +174,27 @@
         }
         &_map {
             padding-bottom: 45%;
+        }
+    }
+}
+
+@media screen and (max-width:370px) {
+    @media screen and (max-width:1100px) {
+        .contact {
+            &_inform {
+                &_item {
+                    &.contact_line {
+                        &::before {
+                            width: 170px;
+                        }
+                        &::after {
+                            width: 80px;
+                            height: 80px;
+                            background-size: contain;
+                        }
+                    }
+                }
+            }
         }
     }
 }
