--- a/public/css/_product.scss
+++ b/public/css/_product.scss
@@ -163,6 +163,7 @@
     &_detail {
         // padding-left: 20px;
         padding-top: 8vw;
+        padding-bottom: 8vw;
         position: relative;
         width: 100%;
         &_slider {
@@ -174,10 +175,16 @@
             padding-left: 20px;
             padding-right: 20px;
             width: 100%;
+            &.big {
+                position: fixed;
+                width: 100%;
+                height: 100vh;
+            }
         }
         &_bigSlider {
             box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.15);
             margin-bottom: 5px;
+            cursor: pointer;
             .swiper-button-next, .swiper-button-prev {
                 background-image: url(../img/product-slider-arrow.svg);
                 background-size: contain;
@@ -207,6 +214,7 @@
             padding-bottom: 100%;
             position: relative;
             background-color: #fff;
+            display: block;
             img {
                 position: absolute;
                 width: 100%;
@@ -255,7 +263,7 @@
                 h2 {
                     font-size: 32px;
                     font-weight: bold;
-                    margin-bottom: 10px;
+                    margin-bottom: 50px;
                     color: $gray-46;
                 }
             }
@@ -343,10 +351,13 @@
                 padding-right: 15px;
             }
         }
-        p, li {
+        * {
             color: $gray-56;
             font-weight: normal;
             margin: 0;
+        }
+        table {
+            width: 100%;
         }
         ol {
             padding-left: 20px;
@@ -831,6 +842,15 @@
             }
         }
     }
+}
+
+.fancybox-close {
+    top: 0;
+    right: -35px;
+}
+
+.fancybox-opened .fancybox-skin {
+    padding: 0 !important;
 }
 
 @media screen and (max-width:1399.98px) {
