--- a/public/css/_video.scss
+++ b/public/css/_video.scss
@@ -125,6 +125,10 @@
             &.active {
                 display: block;
             }
+            iframe {
+                width: 100%;
+                height: 100%;
+            }
         }
         .modal-body {
             position: relative;
@@ -178,6 +182,69 @@
 
 #videoTabContent {
     padding-top: 10px;
+}
+
+.loginPopup {
+    .modal-body {
+        padding: 40px 80px;
+    }
+    .modal-dialog {
+        margin-top: 100px;
+    }
+    &_close {
+        position: absolute;
+        width: 30px;
+        height: 30px;
+        right: 0;
+        bottom: calc(100% + 10px);
+        padding: 0;
+        img {
+            width: 90%;
+        }
+    }
+    &_main {
+        h4 {
+            text-align: center;
+            font-weight: 600;
+            padding-bottom: 20px;
+        }
+        form {
+            padding-bottom: 30px;
+            border-bottom: 1px solid rgb(202, 202, 202);
+            input {
+                margin-bottom: 15px;
+            }
+            button {
+                background-color: #464646;
+                color: #fff;
+                font-weight: bold;
+                padding: 10px 25px;
+                display: block;
+                margin: 0 auto;
+                transition: 0.3s;
+                &:hover {
+                    background-color: $main-red;
+                }
+            }
+        }
+        p {
+            font-size: 15px;
+            text-align: center;
+            margin: 0;
+            font-weight: normal;
+            padding-top: 10px;
+            letter-spacing: 0.05em;
+            a {
+                text-decoration: underline !important;
+                color: $main-blue !important;
+                cursor: pointer;
+                transition: 0.3s;
+                &:hover {
+                    color: $main-red !important;
+                }
+            }
+        }
+    }
 }
 
 @media screen and (max-width:991.98px) {
