--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2739,6 +2739,42 @@ main {
       flex-wrap: wrap;
 }
 
+.about_eh_pic {
+  width: 86%;
+  padding-bottom: calc(86% * 0.69);
+  position: relative;
+}
+
+.about_eh_pic img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.about_eh_equipTitle {
+  position: absolute;
+  padding: 8px 38px;
+  background-color: #194C9F;
+  font-weight: 700;
+  font-size: 18px;
+  color: #fff;
+  top: 13%;
+  right: -16%;
+}
+
+.about_eh_historyTitle {
+  width: 60%;
+  background-color: #194C9F;
+  padding: 76px calc((100vw - 1320px)/2 + 20px) 48px 150px;
+  margin: -25px 0 0 auto;
+}
+
+.about_eh_historyTitle p {
+  color: #fff;
+}
+
 .about_equip {
   width: 50%;
   z-index: 10;
@@ -2799,6 +2835,10 @@ main {
   .about_history_text .title-home {
     font-size: 32px;
   }
+  .about_eh_historyTitle {
+    padding-right: calc((100vw - 1140px)/2 + 20px);
+    padding-left: 100px;
+  }
 }
 
 @media screen and (max-width: 1199.98px) {
@@ -2817,6 +2857,10 @@ main {
   }
   .about_history_text {
     bottom: -32%;
+  }
+  .about_eh_historyTitle {
+    padding-right: calc((100vw - 960px)/2 + 20px);
+    padding-left: 100px;
   }
   .intro-global {
     padding-top: 220px;
@@ -2930,6 +2974,9 @@ main {
   .about_eh .about_content_pic {
     width: 95%;
     padding-bottom: calc(95% * 0.69);
+  }
+  .about_eh_pic {
+    margin-bottom: 110px;
   }
   .about_history {
     width: 100%;
