--- a/public/css/_about.scss
+++ b/public/css/_about.scss
@@ -218,6 +218,35 @@
             }
         }
     }
+    &_rd {
+        padding: 100px 0;
+        background-image: url(../img/rd-bg.png);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        color: #fff;
+        &_content {
+            padding: 15px 0 45px 35px;
+            border-left: 8px solid #fff;
+            width: 50%;
+        }
+        .title-home {
+            margin-bottom: 20px;
+        }
+        .intro_content {
+            color: #fff;
+        }
+        &_pic {
+            margin-top: 20px;
+            .cert {
+                width: 44%;
+            }
+            .duns {
+                width: 35%;
+                margin-left: 4%;
+            }
+        }
+    }
 }
 
 @media screen and (max-width:1399.98px) {
@@ -400,7 +429,6 @@
                 position: static;
                 color: $gray-48;
                 background-color: transparent;
-                // font-size: 24px;
                 width: 95%;
                 margin-left: auto;
                 margin-right: 0;
@@ -414,6 +442,12 @@
                 transform: translateY(-30px);
             }
         }
+        &_rd {
+            .container {
+                max-width: inherit;
+                padding-left: 40px;
+            }
+        }
     }
     .intro-global {
         padding-top: 80px;
@@ -424,6 +458,24 @@
     .company {
         &_text {
             padding: 40px 20px;
+        }
+    }
+    .about {
+        &_rd {
+            padding-bottom: 100vw;
+            background-image: url(../img/rd-bg-m.png);
+            background-position: center bottom;
+            .container {
+                padding-left: 20px;
+            }
+            &_content {
+                width: 100%;
+                padding-left: 20px;
+            }
+            .intro_content {
+                // width: 50%;
+                text-shadow: 0 2px 10px rgba(0,0,0,0.2);
+            }
         }
     }
 }
