--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2822,6 +2822,42 @@ main {
   color: #fff;
 }
 
+.about_rd {
+  padding: 100px 0;
+  background-image: url(../img/rd-bg.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: #fff;
+}
+
+.about_rd_content {
+  padding: 15px 0 45px 35px;
+  border-left: 8px solid #fff;
+  width: 50%;
+}
+
+.about_rd .title-home {
+  margin-bottom: 20px;
+}
+
+.about_rd .intro_content {
+  color: #fff;
+}
+
+.about_rd_pic {
+  margin-top: 20px;
+}
+
+.about_rd_pic .cert {
+  width: 44%;
+}
+
+.about_rd_pic .duns {
+  width: 35%;
+  margin-left: 4%;
+}
+
 @media screen and (max-width: 1399.98px) {
   .company_inner {
     padding-bottom: 80px;
@@ -3001,6 +3037,10 @@ main {
     -webkit-transform: translateY(-30px);
             transform: translateY(-30px);
   }
+  .about_rd .container {
+    max-width: inherit;
+    padding-left: 40px;
+  }
   .intro-global {
     padding-top: 80px;
   }
@@ -3009,6 +3049,21 @@ main {
 @media screen and (max-width: 767.98px) {
   .company_text {
     padding: 40px 20px;
+  }
+  .about_rd {
+    padding-bottom: 100vw;
+    background-image: url(../img/rd-bg-m.png);
+    background-position: center bottom;
+  }
+  .about_rd .container {
+    padding-left: 20px;
+  }
+  .about_rd_content {
+    width: 100%;
+    padding-left: 20px;
+  }
+  .about_rd .intro_content {
+    text-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   }
 }
 
