--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5396,6 +5396,11 @@ main {
   margin-top: 100px;
 }
 
+.loginPopup .modal-content {
+  border-radius: 0;
+  border-top: 5px solid #BB000F;
+}
+
 .loginPopup_close {
   position: absolute;
   width: 30px;
@@ -5413,15 +5418,103 @@ main {
   text-align: center;
   font-weight: 600;
   padding-bottom: 20px;
+  font-size: 32px;
+  line-height: 0.8;
+}
+
+.loginPopup_main h4 span {
+  font-size: 16px;
+  font-weight: normal;
+  color: #194C9F;
 }
 
 .loginPopup_main form {
   padding-bottom: 30px;
-  border-bottom: 1px solid #cacaca;
 }
 
-.loginPopup_main form input {
-  margin-bottom: 15px;
+.loginPopup_main form .login_input {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 50px;
+  padding: 5px 0;
+  border-bottom: 1px solid #c6c6c6;
+  margin-bottom: 20px;
+}
+
+.loginPopup_main form .login_input_icon {
+  width: 40px;
+  border-right: 1px solid #c6c6c6;
+}
+
+.loginPopup_main form .login_input_icon img {
+  width: 50%;
+  display: block;
+  margin: 0 auto;
+}
+
+.loginPopup_main form .login_input input {
+  height: 100%;
+  padding: 0 10px;
+}
+
+.loginPopup_main form .login_input input::-webkit-input-placeholder {
+  color: #ececec;
+}
+
+.loginPopup_main form .login_input input:-ms-input-placeholder {
+  color: #ececec;
+}
+
+.loginPopup_main form .login_input input::-ms-input-placeholder {
+  color: #ececec;
+}
+
+.loginPopup_main form .login_input input::placeholder {
+  color: #ececec;
+}
+
+.loginPopup_main form .login_password input {
+  width: calc(100% - 40px);
+}
+
+.loginPopup_main form .login_code .code-pic {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 90px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.loginPopup_main form .login_code .code-pic .certify {
+  width: 60px;
+}
+
+.loginPopup_main form .login_code .code-pic .transfer {
+  width: 20px;
+  cursor: pointer;
+}
+
+.loginPopup_main form .login_code input {
+  width: calc(100% - 40px - 90px);
+}
+
+.loginPopup_main form a {
+  display: block;
+  text-align: center;
+  margin-top: 10px;
+  color: #194C9F;
+  text-decoration: underline;
+  font-size: 14px;
+  font-weight: normal;
 }
 
 .loginPopup_main form button {
@@ -5429,8 +5522,9 @@ main {
   color: #fff;
   font-weight: bold;
   padding: 10px 25px;
+  width: 100%;
   display: block;
-  margin: 0 auto;
+  margin: 15px auto 0;
   -webkit-transition: 0.3s;
   transition: 0.3s;
 }
@@ -5524,6 +5618,9 @@ main {
   }
   .videoPopup_name {
     width: calc(100% - 100px);
+  }
+  .loginPopup .modal-body {
+    padding: 40px 30px;
   }
 }
 
