--- a/public/css/_index.scss
+++ b/public/css/_index.scss
@@ -7,9 +7,11 @@
             position: relative;
             img {
                 position: absolute;
-                width: 100%;
-                height: 100%;
+                width: 105%;
+                height: 105%;
                 object-fit: cover;
+                top: -5%;
+                left: -5%;
             }
         }
         &_mask {
