--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1634,10 +1634,12 @@ main {
 
 .home-banner .swiper-slide img {
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: 105%;
+  height: 105%;
   -o-object-fit: cover;
      object-fit: cover;
+  top: -5%;
+  left: -5%;
 }
 
 .home-banner_mask {
