--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2512,11 +2512,22 @@ main {
   width: 100%;
 }
 
+.news_detail_text ul {
+  margin: 10px 0;
+}
+
+.news_detail_text a {
+  text-decoration: underline;
+  color: #194C9F !important;
+}
+
 .news_detail_inner {
   max-width: 890px;
   width: 100%;
   margin: 0 auto;
   padding: 0 20px;
+  font-weight: 300;
+  line-height: 1.6;
 }
 
 @media screen and (max-width: 1300px) {
